fixed non wrapping text for stories section

--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -17,14 +17,18 @@
     width: 15rem;
     height: 15rem;
     float: left;
-    -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
-    -webkit-clip-path: circle(50% at 50% 50%);
+    -webkit-shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
-    // transform: translateX(-3rem);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg);
   }
 
   &__img {
     height: 100%;
+  }
+
+  &__text {
+    transform: skewX(12deg);
   }
 }
