--- a/sass/main.css
+++ b/sass/main.css
@@ -399,11 +399,16 @@ body {
   height: 15rem;
   float: left;
   shape-outside: circle(50% at 50% 50%);
-  -webkit-clip-path: circle(50% at 50% 50%);
+  -webkit-shape-outside: circle(50% at 50% 50%);
   clip-path: circle(50% at 50% 50%);
+  -webkit-clip-path: circle(50% at 50% 50%);
+  transform: translateX(-3rem) skewX(12deg);
 }
 .story__img {
   height: 100%;
+}
+.story__text {
+  transform: skewX(12deg);
 }
 
 .row {
